style: Created 1st version of my website.
Created 1st version. Though some errors may be there.

--- a/blogs.html
+++ b/blogs.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog document</title>
+    <title>Blog page</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-
     <nav class="navigation">
-        <div class="nav-brand">Rookie CoderGuy</div>
+        <div class="nav-brand">Welcome to the Blogs</div>
         <ul class="lists-non-bullets navlist">
             <li class="lists-inline">
                 <a class="nav-links" href="/">Home</a>
@@ -25,15 +24,14 @@
     </nav>
 
     <header class="hero">
-        <img class="main-image" src="https://images.unsplash.com/photo-1611262588019-db6cc2032da3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80
-    " />
-    <h1 class="hero hero-header">Aish Lohiya <span class="span">Rookie CoderGuy</span></h1>
+    <h1 class="hero hero-header">Let me know your thoughts about my Blogs.</h1>
     </header>
+
     <hr>
 
     <section class="section black">
-        <h1>Technology</h1>
-        <p>I know repl.it,HTML,CSS. I am a newbie trying to learn how to code</p>
+        <h1>Dummy blog no 1 </h1>
+        <p>This is a normal blog, i have created about myself on how well do you know me. Give it a try.</p>
         <a class="links-primary" href="https:/www.google.com">View Project</a>
         <a class="links-secondary" href="https:/www.instagram.com">View Source</a>
     </section>
@@ -49,7 +47,6 @@
             <li class="lists-inline"> 
                 <a class="social-links" href="https://linkedin.com">Linkedin </a> </li> <li class="lists-inline"> <a
                         class="social-links" href="https:/twitter.com/aishlohiya">Twitter</a> </li> </ul> </footer> </body> </html>
-
 
 </body>
 </html>
