--- a/projects.html
+++ b/projects.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog document</title>
+    <title>Rookie CoderGuy Projects</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-
     <nav class="navigation">
-        <div class="nav-brand">Rookie CoderGuy</div>
+        <div class="nav-brand">Welcome to the Projects</div>
         <ul class="lists-non-bullets navlist">
             <li class="lists-inline">
                 <a class="nav-links" href="/">Home</a>
@@ -25,17 +24,25 @@
     </nav>
 
     <header class="hero">
-        <img class="main-image" src="https://images.unsplash.com/photo-1611262588019-db6cc2032da3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=667&q=80
-    " />
-    <h1 class="hero hero-header">Aish Lohiya <span class="span">Rookie CoderGuy</span></h1>
+    <h1 class="hero hero-header">Let me know your thoughts about my projects.</h1>
     </header>
+
     <hr>
 
     <section class="section black">
-        <h1>Technology</h1>
-        <p>I know repl.it,HTML,CSS. I am a newbie trying to learn how to code</p>
-        <a class="links-primary" href="https:/www.google.com">View Project</a>
-        <a class="links-secondary" href="https:/www.instagram.com">View Source</a>
+        <h1>Fake or Not Fake game</h1>
+        <p>This is a normal game where you have to give your answers on whether the statement is fake or not</p>
+        <a class="links-primary" href="https://replit.com/@aishlohiya/Mark-2-quiz-show?embed=1&output=1#index.js">View Project</a>
+        <a class="links-secondary" href="https://replit.com/@aishlohiya/Mark-2-quiz-show#index.js">View Source</a>
+    </section>
+
+    <hr >
+
+    <section class="section black">
+        <h1>Game on Do you know me? </h1>
+        <p>This is a normal game, i have created about myself on how well do you know me. Give it a try.</p>
+        <a class="links-primary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself?embed=1&output=1#index.js">View Project</a>
+        <a class="links-secondary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself#index.js">View Source</a>
     </section>
 
     <hr >
@@ -49,7 +56,6 @@
             <li class="lists-inline"> 
                 <a class="social-links" href="https://linkedin.com">Linkedin </a> </li> <li class="lists-inline"> <a
                         class="social-links" href="https:/twitter.com/aishlohiya">Twitter</a> </li> </ul> </footer> </body> </html>
-
 
 </body>
 </html>
