update: Projects section completed

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
     <section class="section black">
         <h1>Technology</h1>
-        <p>I know repl.it,HTML,CSS. I am a newbie trying to learn how to code</p>
-        <a class="links-primary" href="https:/www.google.com">View Project</a>
-        <a class="links-secondary" href="https:/www.instagram.com">View Source</a>
+        <p>I am familiar with HTML5, CSS3, GitHub, JavaScript, NodeJS, ReactJS and Web Hosting</p>
+        <a class="links-primary" href="https://rookiecoderguy.netlify.app/projects.html">View Project</a>
     </section>
 
     <hr >
@@ -47,8 +46,8 @@
                 <a class="social-links" href="https://github.com/aishlohiya">Github</a>
             </li>
             <li class="lists-inline"> 
-                <a class="social-links" href="https://linkedin.com">Linkedin </a> </li> <li class="lists-inline"> <a
-                        class="social-links" href="https:/twitter.com/aishlohiya">Twitter</a> </li> </ul> </footer> </body> </html>
+                <a class="social-links" href="https://www.linkedin.com/in/aish-lohiya-01806278/">Linkedin </a> </li> <li class="lists-inline"> <a
+                        class="social-links" href="https://twitter.com/rookiecoderguy">Twitter</a> </li> </ul> </footer> </body> </html>
 
 
 </body>
