--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,98 @@
     <hr>
 
     <section class="section black">
-        <h1>Fake or Not Fake game</h1>
-        <p>This is a normal game where you have to give your answers on whether the statement is fake or not</p>
+        <h1>MarkForteen: Profit & Loss calculator</h1>
+        <p>A profit and loss calculator web app</p>
+        <a class="links-primary" href="https://profitloss-rookiecoderguy.netlify.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/Mark14-ProfitLoss">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkThirteen: Is your birthday a palindrome?</h1>
+        <p>A webapp to check whether your birthday is a palindrome.</p>
+        <a class="links-primary" href="https://birthdaypalindrome-rookiecoderguy.netlify.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/Mark-13-birthday-palindrome">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkTwelve: Fun with Triangles</h1>
+        <p>Triangle app with quiz</p>
+        <a class="links-primary" href="https://funwithtriangles-rookiecoderguy.netlify.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/mark12-fun-with-triangles">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkEleven: Birthday Luck</h1>
+        <p>A webapp to check whether birthday is lucky or not</p>
+        <a class="links-primary" href="https://birthdayluck-rookiecoderguy.netlify.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/Mark11-Is-your-birthday-lucky">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkTen: Cash register manager app</h1>
+        <p>A webapp to let the user know about how much cash to be returned.</p>
+        <a class="links-primary" href="https://cashregister-rookiecoderguy.netlify.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/Mark-10-Cash-Register">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkNine: Recommendations App</h1>
+        <p>A recommendation web app for the users</p>
+        <a class="links-primary" href="https://yewwu.csb.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/mark-nine">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkEight: Emoji Translator</h1>
+        <p>A translation web app that will help you identify Emoji.</p>
+        <a class="links-primary" href="https://uuh2b.csb.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/Mark-Eight-Emoji-Translator">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkSeven: Dothraki Translator</h1>
+        <p>A translation web app that will translate your sentences into the language of Mother of Dragons.</p>
+        <a class="links-primary" href="https://dothrakitranslator-rookiecoderguy.netlify.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/DothrakiTranslator">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkSix: Minions Translator</h1>
+        <p>A translation web app that will translate your sentences into Banana language.</p>
+        <a class="links-primary" href="https://minionstranslator-rookiecoderguy.netlify.app/">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/MinionsTranslator">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkThreeToFive: Portfolio app</h1>
+        <p>A website for the portfolio access</p>
+        <a class="links-primary" href="https://rookiecoderguy.netlify.app/projects.html">View Project</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/rookiecoderyguy">View Source</a>
+    </section>
+
+    <hr>
+
+    <section class="section black">
+        <h1>MarkTwo: Fake or Not Fake game</h1>
+        <p>This is a normal game where you have to give your answers on whether the statement is fake or not.</p>
         <a class="links-primary" href="https://replit.com/@aishlohiya/Mark-2-quiz-show?embed=1&output=1#index.js">View Project</a>
         <a class="links-secondary" href="https://replit.com/@aishlohiya/Mark-2-quiz-show#index.js">View Source</a>
     </section>
@@ -39,10 +129,10 @@
     <hr >
 
     <section class="section black">
-        <h1>Game on Do you know me? </h1>
+        <h1>MarkOne: Do you know me? </h1>
         <p>This is a normal game, i have created about myself on how well do you know me. Give it a try.</p>
-        <a class="links-primary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself?embed=1&output=1#index.js">View Project</a>
-        <a class="links-secondary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself#index.js">View Source</a>
+        <a class="links-primary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself-Final-version?embed=1&output=1#index.js">View Project</a>
+        <a class="links-secondary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself-Final-version#index.js">View Source</a>
     </section>
 
     <hr >
