update: blog updated

--- a/blogs.html
+++ b/blogs.html
@@ -30,10 +30,17 @@
     <hr>
 
     <section class="section black">
-        <h1>Dummy blog no 1 </h1>
-        <p>This is a normal blog, i have created about myself on how well do you know me. Give it a try.</p>
-        <a class="links-primary" href="https:/www.google.com">View Project</a>
-        <a class="links-secondary" href="https:/www.instagram.com">View Source</a>
+        <h1>Understanding difference between var/let/const</h1>
+        <p>Tried to simplify var/let/const variable difference from a rookie coder perspective.</p>
+        <a class="links-primary" href="https://rookiecoderguy.notion.site/Understanding-difference-between-var-let-and-const-in-JavaScript-b6d18795368049958351ade2f6c38f29">View Blog</a>
+    </section>
+
+    <hr >
+
+    <section class="section black">
+        <h1>AWS story</h1>
+        <p>Story about AWS beginnings</p>
+        <a class="links-primary" href="https://rookiecoderguy.notion.site/AWS-story-502caa8cbde5456186b7e2b9dabedf28">View Blog</a>
     </section>
 
     <hr >
