--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
         <h1>MarkTwo: Fake or Not Fake game</h1>
         <p>This is a normal game where you have to give your answers on whether the statement is fake or not.</p>
         <a class="links-primary" href="https://replit.com/@aishlohiya/Mark-2-quiz-show?embed=1&output=1#index.js">View Project</a>
-        <a class="links-secondary" href="https://replit.com/@aishlohiya/Mark-2-quiz-show#index.js">View Source</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/Mark-2-quiz-show">View Source</a>
     </section>
 
     <hr >
@@ -132,7 +132,7 @@
         <h1>MarkOne: Do you know me? </h1>
         <p>This is a normal game, i have created about myself on how well do you know me. Give it a try.</p>
         <a class="links-primary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself-Final-version?embed=1&output=1#index.js">View Project</a>
-        <a class="links-secondary" href="https://replit.com/@aishlohiya/Mark-1-Quiz-about-myself-Final-version#index.js">View Source</a>
+        <a class="links-secondary" href="https://github.com/aishlohiya/Mark-1-Quiz-about-myself.-Final-version">View Source</a>
     </section>
 
     <hr >
