update: website updated

--- a/projects.html
+++ b/projects.html
@@ -144,8 +144,8 @@
                 <a class="social-links" href="https://github.com/aishlohiya">Github</a>
             </li>
             <li class="lists-inline"> 
-                <a class="social-links" href="https://linkedin.com">Linkedin </a> </li> <li class="lists-inline"> <a
-                        class="social-links" href="https:/twitter.com/aishlohiya">Twitter</a> </li> </ul> </footer> </body> </html>
+                <a class="social-links" href="https://www.linkedin.com/in/aish-lohiya-01806278/">Linkedin </a> </li> <li class="lists-inline"> <a
+                        class="social-links" href="https://twitter.com/rookiecoderguy">Twitter</a> </li> </ul> </footer> </body> </html>
 
 </body>
 </html>
